--- a/css/partials/_container.scss
+++ b/css/partials/_container.scss
@@ -5,11 +5,9 @@
   //   flex-direction: column;
   > div {
     display: flex;
-    flex-direction: column;
-    @media screen and (min-width: 720px) {
-    }
-    @media screen and (min-width: 320px) {
-      //   flex-direction: row;
+    flex-wrap: wrap;
+    @media screen and (max-width: 720px) {
+      //   flex-direction: column;
     }
   }
 }
